--- a/static/css/home.css
+++ b/static/css/home.css
@@ -45,14 +45,14 @@
     display: flex;
     flex-direction: column;
     height: available;
-    border: blue solid 3px;
+    /*border: blue solid 3px;*/
 }
 
 .add-record-input-container{
     display: none;
     flex-direction: column;
     height: available;
-    border: solid red 2px;
+    /*border: solid red 2px;*/
 }
 .add-record-input-container input{
     height: 30px;
