--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 
         <a href="/data-import"><button class="navbar-buttons">Create Dashboard</button></a>
         <a href="#"><button class="navbar-buttons">Cost Estimation</button></a>
-        <a href="#"><button class="navbar-buttons">Find Clients</button></a>
+        <a href="#"><button class="navbar-buttons">Ask It <sup class="beta-sup">beta</sup></button></a>
     </div>
     <div class="right-navbar">
         <span>{{ user["email"] }}</span>
@@ -23,16 +23,16 @@
             {% if projects %}
                 {% for project in projects %}
                     <div class="thumbnail-container">
-                        <button class="thumbnail-btn" type="submit" name="project_button" value="{{ project }}">
+                        <button class="thumbnail-btn" type="submit" name="project_button" value="{{ project[0] }}">
                             <img src="{{ url_for("static", filename="site_images/dashboard_thumbnail.png") }}" alt="submit" width="70px"/>
                         </button>
                         <div class="project-details-container">
-                            <h3 class="thumbnail-label">{{ project }}</h3>
-                            <h4 class="detail-rows">Dashboard last updated: <span class="project-load-date">DATE</span></h4>
+                            <h3 class="thumbnail-label">{{ project[0] }}</h3>
+                            <p class="detail-rows">Dashboard last updated: <span class="project-load-date">{{ project[1] }}</span></p>
                             <div class="main-action-btns">
-                                <button class="project-options view-btn" type="submit" name="project_button" value="{{ project }}">View</button>
-                                <button class="project-options edit-btn" name="project_button" value="edit_{{ project }}">Edit</button>
-                                <button class="project-options remove-btn" name="project_button" value="delete_{{ project }}">Remove</button>
+                                <button class="project-options view-btn" type="submit" name="project_button" value="{{ project[0] }}">View Dashboard</button>
+                                <button class="project-options edit-btn" name="project_button" value="edit_{{ project[0] }}">Details</button>
+                                <button class="project-options remove-btn" name="project_button" value="delete_{{ project[0] }}">Remove</button>
                             </div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                 <option value="none">Select a dashboard.</option>
                 {% if projects %}
                     {% for project in projects %}
-                        <option value="{{ project }}">{{ project }}</option>
+                        <option value="{{ project[0] }}">{{ project[0] }}</option>
                     {% endfor %}
                 {% endif %}
             </select>
