--- a/templates/import_data.html
+++ b/templates/import_data.html
@@ -69,7 +69,7 @@
             <p>Upload an excel or csv file.</p>
             <form method="post" enctype=multipart/form-data>
                 <input type="file" name="file" class="file-input"><br>
-                <input type="submit" value="Upload" class="upload-btn">
+                <input type="submit" value="Upload" class="upload-btn theme-btn">
             </form>
 
             <div class="message">
