--- a/static/css/base.css
+++ b/static/css/base.css
@@ -108,3 +108,17 @@ html, body{
 .show-border{
     border: crimson solid 2px;
 }
+
+.theme-btn{
+    border: none;
+    background-color: #a5a5a5;
+    color: #f0f0f0;
+    padding: 5px 8px 5px 8px;
+}
+
+.theme-btn:hover{
+    cursor: pointer;
+    background-color: black;
+    box-shadow: #6D6D6D -1px 1px 5px;
+    color: white;
+}
