--- a/static/css/preview_data.css
+++ b/static/css/preview_data.css
@@ -15,13 +15,16 @@
     flex-direction: column;
     align-items: center;
     /*border: solid red 2px;*/
-    justify-content: center;
+    /*justify-content: center;*/
 }
 
 .inner-preview-options{
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*border: solid blue 2px;*/
+    margin-top: 10px;
+}
+
+.inner-preview-options h3{
+    margin-bottom: 8px;
+    margin-left: 5px;
 }
 
 .form-container{
@@ -32,7 +35,7 @@
     padding-top: 15px;
     /*align-items: center;*/
     /*justify-content: center;*/
-    padding-left: 10px;
+    padding-left: 25px;
 }
 
 form{
@@ -62,10 +65,11 @@ select{
 
 .materials-selection-box{
     font-size: 14px;
-    height: 10vh;
+    height: 15vh;
     overflow-y: scroll;
     border: rgba(146,146,146,0.61) solid 1px;
     margin-right: 50px;
+    margin-top: 5px;
 }
 
 .btn-container{
@@ -165,11 +169,12 @@ select{
 .table-container{
     overflow-x: scroll;
     height: 70vh;
+    box-shadow: #6D6D6D -2px -1px 5px;
 }
 
 .table{
     width: 200vw;
-    box-shadow: #7d7d7d -5px 0 10px;
+    /*box-shadow: #7d7d7d -5px 0 10px;*/
     height: 70vh;
     /*padding: 0;*/
     /*margin: 0;*/
