--- a/templates/preview_data.html
+++ b/templates/preview_data.html
@@ -17,7 +17,7 @@
 {% block content %}
         <div class="preview-options">
             <div class="inner-preview-options">
-                <h3>We're ready to map your data!</h3>
+                <h3>Ready to map your data.</h3>
                 <div class="form-container make-card" id="form-container">
                     <form action="" method="post" class="dashboard-form">
                         <input name="data-title" type="text" class="data-title" placeholder="Give your data a name...">
